# baro-cli

./: Cargo.toml  LICENSE  README.md  install-claude.ps1  install-claude.sh  install.sh
.github/workflows/: release.yml
src/: api.rs  auth.rs  cli.rs  config.rs  main.rs  manifest.rs  packaging.rs  publish_gate.rs  types.rs  update_check.rs  utils.rs
