[package]
name = "baro"
version = "0.3.0"
edition = "2021"
description = "CLI for the Baro AI product marketplace"
authors = ["codetree <hi@bandb.ai>"]
license = "MIT"
homepage = "https://baro-sync.com"
repository = "https://github.com/codetree21/baro-cli"
readme = "README.md"
keywords = ["ai", "marketplace", "cli"]
categories = ["command-line-utilities"]

[profile.release]
strip = true
lto = true

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "6"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
chrono = "0.4"
walkdir = "2"
ignore = "0.4"
open = "5"

[dev-dependencies]
tempfile = "3"
